--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,28 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 12px;
 }
-
 .blue-color {
   color: #00acf0;
 }
-
 .bold {
   font-weight: 600;
 }
-
 .large {
   font-size: 16px;
+}
+.divider{
+  height: 20px;
+}
+.card > div{
+  padding:20px;
+}
+.card-img{
+  width: 70%;
+  max-height: 130px;
+  margin: 0px 15%;
+}
+.card-text{
+  font-size: 1.2em;
+  margin: 20px;
+  text-align: center;
 }
