--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,13 @@ body {
 }
 .card-img{
   width: 70%;
-  max-height: 130px;
   margin: 0px 15%;
 }
 .card-text{
   font-size: 1.2em;
   margin: 20px;
   text-align: center;
+}
+.content{
+  padding: 15px
 }
